# fantasybattle-refactoring-kata

./: README.md  notes.md
c/src/: CMakeLists.txt  buff.c  damage.h  equipment.c  inventory.h  item.c  item.h  player.c  stats.c  stats.h
c/test-cmocka/player_test/: CMakeLists.txt
csharp/: README.md
csharp/FantasyBattle/: Inventory.cs
csharp/FantasyBattle.Tests/: PlayerTest.cs
io/: .gitignore  package.json
io/io/: Damage.io  Equipment.io  Inventory.io  SimpleEnemy.io
java/: pom.xml
kotlin/: build.gradle
misc/c/: CMakeLists.txt  README.md
misc/c/src/: armor.c  armor.h  buff.h  damage.c  equipment.h  inventory.c  player.h
misc/c/test-cmocka/: CMakeLists.txt
misc/c/test-cmocka/player_test/: player_test.c
misc/cpp/test/: PlayerTest.cpp
misc/io/: README.md
misc/io/io/: BasicBuff.io  BasicItem.io  Player.io  SimpleArmor.io  Stats.io  Target.io
misc/io/tests/correctness/: PlayerTest.io
misc/java/src/test/java/codingdojo/: PlayerTest.java
misc/python/: README.md  enemy.py  inventory.py
misc/typescript/tests/: Player.spec.ts
python/: gear.py  player.py
python/test/: test_player.py
src/FantasyBattle/: Inventory.cs  Player.cs
src/FantasyBattle.Tests/: FantasyBattle.Tests.csproj  InventoryTest.cs  PlayerTest.cs  TestData.cs
typescript/: tsconfig.json
